@@ -1,4 +1,0 @@
-Value: [4](3,7,0,0)
-Result: [1](-1)
-Value: [4](8,2,5,666)
-Result: [1](74)
